--- a/portfolio/styles/style.scss
+++ b/portfolio/styles/style.scss
@@ -17,3 +17,70 @@ $gray-text: #2c2c2c;
 }
 
 @import './global';
+@import './intro';
+@import './projects';
+@import './contact';
+@import './footer';
+
+/*MEDIA QUERIES*/
+@media screen and (max-width: 1332px) {
+    html {
+        font-size: 53%;
+    }
+    .splash {
+        display: none;
+    }
+    svg {
+        width: 80%;
+    }
+    nav {
+        width: 100%;
+    }
+}
+
+@media screen and (max-width: 754px) {
+    html {
+        font-size: 45%;
+    }
+    svg {
+        height: 60%;
+    }
+    .main-header {
+        width: 100%;
+    }
+    nav {
+        .logo {
+            @include flex(center, center, column);
+            flex: 1 1 30rem;
+            margin-top: 2rem;
+        }
+        ul {
+            flex: 1 1 60rem;
+            margin: 2rem 0;
+        }
+    }
+    .intro-text {
+        margin-top: 5rem;
+        text-align: center;
+    }
+    .intro-social {
+        @include flex(center, center, row);
+        a {
+            margin: 2rem;
+        }
+    }
+    .intro.images {
+        text-align: center;
+    }
+    .elena-joy, .travelly {
+        flex: 1 1 50rem;
+        img {
+            width: 100%;
+            height: 100%;
+        }
+    }
+    form {
+        padding: 0;
+        width: 100%;
+    }
+}
